zero-trust-gitops-platform/gitops/apps/demo-api/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-api
  labels:
    app.kubernetes.io/name: demo-api
    app.kubernetes.io/managed-by: argocd
spec:
  selector:
    app.kubernetes.io/name: demo-api
  ports:
    - name: http
      port: 80
      targetPort: http
